# sysproject

SYS_Client/: CMakeLists.txt  global.h  imgview.cpp  imgview.h  imgwidget.cpp  imgwidget.h  loadingdialog.cpp  loadingdialog.h  loadingdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfviewerdialog.cpp  pdfviewerdialog.h  pdfviewerdialog.ui  processview.cpp  processview.h  processview.ui  res.qrc  resultviewer.cpp  resultviewer.h  resultviewer.ui  sandcard.cpp  sandcard.h  sandcard.ui  sandinfodialog.cpp  sandinfodialog.h  sandinfodialog.ui  taskinfoform.cpp  taskinfoform.h  taskinfoform.ui  widget.cpp  widget.h  widget.ui
SYS_Client/pdfium/: PDFiumConfig.cmake
SYS_Client/pdfium/include/: fpdfview.h
SYS_Server/: SYS_Server.pro  calculation.cpp  calculation.h  cvprocess.cpp  cvprocess.h  generaterepo.cpp  generaterepo.h  getimages.cpp  getimages.h  global.h  main.cpp  tcpcommunication.cpp  tcpcommunication.h
